# autostock-stock-fn-scraper

./: .env.sample  .gitmodules  Cargo.toml
.cargo/: config.toml
doc/: model.sql
src/: fi_registry.rs  lib.rs  logger.rs  main.rs
src/apps/stock-fn-export/: main.rs
src/apps/stock-fn-scrap/: main.rs
src/data_source/: mod.rs
src/data_source/naver/: mod.rs
src/entities/: financial_info.rs  item_info.rs  item_price.rs  mod.rs  repo_spec.rs
src/repository/: mod.rs
src/repository/repo_impl_mysql/: convert.rs  mod.rs  repo.rs  repo_fi_annuals.rs  repo_fi_quarters.rs  repo_stock_prices.rs  repo_stocks.rs  repo_tx.rs
src/types/: errors.rs  mod.rs
