[package]
name = "stock-fn-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
dotenvy = { version = "0.15.7", optional = true }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
mysql_async = { version = "0.36.1", optional = true }
mysql_common = { version = "0.35.5", features = ["chrono"], optional = true }
ratelimit = "0.10.0"
repo-helper = { version = "0.1.0", path = "repo-helper", optional = true }
reqwest = "0.12.25"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
urlencoding = "2.1.3"

[features]
default = ["mysql", "dotenv"]
dotenv = ["dep:dotenvy"]
mysql = ["dep:mysql_async", "dep:mysql_common", "repo-helper", "repo-helper/mysql_async_helper"]
