[package]
name = "stock-fn-scraper"
version = "0.1.0"
edition = "2024"
default-run = "stock-fn-scrap"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
csv = "1.4.0"
dotenvy = { version = "0.15.7", optional = true }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
mysql_async = { version = "0.36.1", optional = true }
mysql_common = { version = "0.35.5", features = ["chrono"], optional = true }
ratelimit = "0.10.0"
repo-helper = { version = "0.1.0", path = "repo-helper", optional = true }
reqwest = "0.12.25"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
urlencoding = "2.1.3"

[features]
default = ["mysql", "dotenv"]
dotenv = ["dep:dotenvy"]
mysql = ["dep:mysql_async", "dep:mysql_common", "repo-helper", "repo-helper/mysql_async_helper"]


[[bin]]
name = "stock-fn-scrap"
path = "src/apps/stock-fn-scrap/main.rs"

[[bin]]
name = "stock-fn-export"
path = "src/apps/stock-fn-export/main.rs"
